Production/Production/src/objects/Payment_Plan_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Due__c</fullName>
        <formula>Amount__c -  Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <defaultValue>0.000</defaultValue>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <formula>Payment_Plan__r.Billing_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>More_than_95_paid__c</fullName>
        <formula>Amount_Paid__c  &gt;= ( Amount__c  *0.95)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>More than 95% paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Payment_Due_Date__c</fullName>
        <description>Calculated by code when items are being generated</description>
        <label>Next Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Plan__c</fullName>
        <label>Payment Plan</label>
        <referenceTo>Payment_Plan__c</referenceTo>
        <relationshipLabel>Payment Plan Lines</relationshipLabel>
        <relationshipName>Payment_Plan_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Plan Line Item</label>
    <nameField>
        <label>Payment Plan Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Plan Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_change_Amount_or_Date_Due</fullName>
        <active>false</active>
        <description>Agents should not be able to modify the Amount or the Due Date once Line Items have been generated.</description>
        <errorConditionFormula>AND(NOT(ISNEW()),
     OR(ISCHANGED( Amount__c ), ISCHANGED( Due_Date__c )))</errorConditionFormula>
        <errorMessage>You cannot modify the Amount or the Due Date once Line Items have been generated.</errorMessage>
    </validationRules>
</CustomObject>